force-app/main/default/objects/Opportunity/fields/Accident_code__c.field-meta.xml
<CustomField>
    <fullName>Accident_code__c</fullName>
    <label>Accident code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>