force-app/main/default/objects/Opportunity/fields/Accident_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Date__c</fullName>
    <label>Accident Date</label>
    <type>DateTime</type>
</CustomField>