force-app/main/default/objects/Opportunity/fields/Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Amount__c</fullName>
    <label>Customer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>