force-app/main/default/objects/Opportunity/fields/Damage_description__c.field-meta.xml
<CustomField>
    <fullName>Damage_description__c</fullName>
    <label>Damage description</label>
    <type>TextArea</type>
</CustomField>