force-app/main/default/objects/Opportunity/fields/Date_Time_of_Reception__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Reception__c</fullName>
    <label>Date/Time of Reception</label>
    <type>DateTime</type>
</CustomField>