force-app/main/default/objects/Opportunity/fields/Expert_name__c.field-meta.xml
<CustomField>
    <fullName>Expert_name__c</fullName>
    <label>Expert name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>