force-app/main/default/objects/Opportunity/fields/External_reception_code__c.field-meta.xml
<CustomField>
    <fullName>External_reception_code__c</fullName>
    <displayFormat>REC{DD}{MM}{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>External reception code</label>
    <type>AutoNumber</type>
</CustomField>