force-app/main/default/objects/Opportunity/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_List</valueSetName>
    </valueSet>
</CustomField>