force-app/main/default/objects/Opportunity/fields/LK_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>LK_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Car Registrations</relationshipLabel>
    <relationshipName>Car_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>