force-app/main/default/objects/Opportunity/fields/Policyholder_name__c.field-meta.xml
<CustomField>
    <fullName>Policyholder_name__c</fullName>
    <label>Policyholder name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>