force-app/main/default/objects/Opportunity/fields/TXT_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>TXT_Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>